# SmartAutomationProject

./: .gitignore  AUTHENTICATION_SETUP.md  CHANGELOG-RakePlanner.md  PORT_SOLUTION.md  README.md  VERCEL_DEBUG.md  debug-api.js  package-lock.json  package.json  render.yaml  web.pid
apps/SAILING 3/: package.json
apps/SAILING 3/app/: globals.css  layout.tsx  page.tsx
apps/SAILING 3/components/: admin-overview.tsx  ai-insights-panel.tsx  ai-planner-tool.tsx  ai-recommendation-engine.tsx  alerts-panel.tsx  animated-stats.tsx  audit-logs.tsx  background-animation.tsx  calendar-view.tsx  cost-breakdown-chart.tsx  cost-comparison-table.tsx  cost-savings-chart.tsx  dashboard-layout.tsx  dispatch-matrix-heatmap.tsx  dispatch-plan-table.tsx  executive-kpi-cards.tsx  (+18 more)
apps/api/: DEPLOY.md  index.js  jest.config.cjs  package.json
apps/web/: .env.local.example  DEPLOY.md  next.config.js  next.config.mjs  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
docs/: PRODUCTION_READINESS.md
sailqsteel-opti-flow-main 2/: package-lock.json  tailwind.config.ts
scripts/: dev-start.js  port-manager.js  run-preview.sh  start-dev.ps1
services/ai/: main.py  requirements.txt
services/rake_optimizer/: README.md  pyproject.toml
services/rake_optimizer/config/: __init__.py
services/rake_optimizer/data/: README.md  shipments.csv
services/rake_optimizer/src/: __init__.py
services/rake_optimizer/src/rake_optimizer/: __init__.py  load.py  loader.py
services/rake_optimizer/tests/: test_loader.py
tmp-landing/sailqsteel-opti-flow-main/: README.md  index.html
(+183 files in other folders)
