[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rake-optimizer"
version = "0.1.0"
description = "Railway rake optimization utilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sih208" }]
keywords = ["railway", "rake", "optimization"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
